--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "style-loader": "^0.18.2",
     "vue": "^2.3.4",
     "vue-loader": "^13.0.0",
+    "vue-resource": "^1.3.4",
     "vue-template-compiler": "^2.3.4",
     "webpack": "^3.1.0",
     "webpack-manifest-plugin": "^1.1.1",
