--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
+    "babel-eslint": "^8.0.2",
+    "eslint": "^4.11.0",
+    "eslint-plugin-vue": "^2.1.0",
     "webpack-dev-server": "^2.5.1"
   }
 }
