Added sequencing run vue.js front end.

--- a/package.json
+++ b/package.json
@@ -2,42 +2,28 @@
   "name": "traction",
   "private": true,
   "dependencies": {
-    "autoprefixer": "^7.1.2",
-    "babel-core": "^6.25.0",
-    "babel-loader": "7.x",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
-    "bootstrap": "^3.3.7",
-    "coffee-loader": "^0.7.3",
-    "coffee-script": "^1.12.6",
-    "compression-webpack-plugin": "^0.4.0",
-    "css-loader": "^0.28.4",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^0.11.2",
-    "glob": "^7.1.2",
-    "js-yaml": "^3.8.4",
-    "node-sass": "^4.5.3",
-    "path-complete-extname": "^0.1.0",
-    "postcss-loader": "^2.0.6",
-    "postcss-smart-import": "^0.7.5",
-    "precss": "^2.0.0",
-    "rails-erb-loader": "^5.0.2",
-    "resolve-url-loader": "^2.1.0",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "vue": "^2.3.4",
-    "vue-loader": "^13.0.0",
-    "vue-template-compiler": "^2.3.4",
-    "webpack": "^3.1.0",
-    "webpack-manifest-plugin": "^1.1.1",
-    "webpack-merge": "^4.1.0"
+    "@rails/webpacker": "^3.0.2",
+    "bootstrap": "4.0.0-beta.2",
+    "bootstrap-vue": "^1.0.0",
+    "coffeescript": "1.12.7",
+    "eslint-plugin-jasmine": "^2.9.1",
+    "vue": "^2.5.3",
+    "vue-loader": "^13.4.0",
+    "vue-resource": "^1.3.4",
+    "vue-router": "^3.0.1",
+    "vue-template-compiler": "^2.5.3"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.2",
-    "eslint": "^4.11.0",
-    "eslint-plugin-vue": "^2.1.0",
-    "webpack-dev-server": "^2.5.1"
+    "eslint": "^4.10.0",
+    "eslint-plugin-vue": "^3.13.1",
+    "jasmine-core": "^2.8.0",
+    "karma": "^1.7.1",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-webpack": "^2.0.5",
+    "phantomjs-prebuilt": "^2.1.16",
+    "webpack-dev-server": "^2.9.4"
   }
 }
